<resources>
    <string name="app_name">Exoplayer</string>

    <string name="action_play_a_video">Play a video</string>
    <string name="action_verify">Verify</string>
    <string name="action_not_now">Not now</string>
    <string name="action_play_a_single_video">Play a single video</string>
    <string name="action_play_a_playlist">Play a playlist</string>
    <string name="action_clipping_a_video_this_will_play_only_5_seconds">Clipping a video, this will play only 5 seconds</string>
    <string name="action_loop_a_video_5_times">Loop a video 5 times</string>
    <string name="action_a_more_sophisticated_video_player">Play a more sophisticated video player</string>
    <string name="action_play">Play</string>
    <string name="action_back">Back</string>
    <string name="action_like">Like</string>
    <string name="action_share">Share</string>
    <string name="action_full_screen">Full Screen</string>
    <string name="action_play_a_video_with_ads">Play a video with Ads</string>

    <string name="preferences_settings">Settings</string>

    <string name="msg_allow_permission_to_gallery">Allow ExoPlayer to access your gallery to send videos</string>
    <string name="msg_allow_permission_in_settings">You need to allow us to access your gallery in order to send video.Go to Settings > Permissions > Check Storage</string>

    <string name="question_what_do_you_want_to_play">What do you want to play?</string>

    <string name="video_mp4_toy_story">http://www.html5videoplayer.net/videos/toystory.mp4</string>
    <string name="video_mp4_sintel">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/Sintel.mp4</string>
    <!--<string name="video_dash_google_play">http://www.youtube.com/api/manifest/dash/id/3aa39fa2cc27967f/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=A2716F75795F5D2AF0E88962FFCD10DB79384F29.84308FF04844498CE6FBCE4731507882B8307798&key=ik0</string>
    <string name="video_dash_google_glass">http://yt-dash-mse-test.commondatastorage.googleapis.com/media/feelings_vp9-20130806-manifest.mpd</string>-->

    <string name="msg_simple_examples">Simple examples</string>
    <string name="simple">Simple</string>
    <string name="complex">Complex</string>
    <string name="msg_complex_examples">Complex examples</string>

    <string name="track_selection_audio">Audio</string>
    <string name="track_selection_video">Video</string>
    <string name="track_selection_text">Text</string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="plus_10">+10</string>
    <string name="minus_10">-10</string>

</resources>
