<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".simple_examples.MainActivity"
    android:id="@+id/linear_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/msg_complex_examples"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/question_what_do_you_want_to_play"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp">

        <RadioButton
            android:id="@+id/radio_button_single_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_play_a_single_video"/>

        <RadioButton
            android:id="@+id/radio_button_video_with_ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_play_a_video_with_ads"/>

    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/stroke_button"
        android:padding="10dp"
        android:text="@string/action_play"
        android:textColor="@color/colorWhite" />

</LinearLayout>